@@ -5,17 +5,17 @@
 #else
 #define	USED
 #endif
-static const char sccsid[] USED = "@(#)/usr/ucb/refer.sl	5.4 (gritter) 10/2/07";
+static const char sccsid[] USED = "@(#)/usr/ucb/refer.sl	5.5 (gritter) 9/7/08";
 /* SLIST */
 /*
 addbib.c: * Sccsid @(#)addbib.c	1.3 (gritter) 10/22/05
 deliv2.c: * Sccsid @(#)deliv2.c	1.3 (gritter) 10/22/05
-glue1.c: * Sccsid @(#)glue1.c	1.3 (gritter) 10/22/05
+glue1.c: * Sccsid @(#)glue1.c	1.4 (gritter) 9/7/08
 glue2.c: * Sccsid @(#)glue2.c	1.3 (gritter) 10/22/05
-glue3.c: * Sccsid @(#)glue3.c	1.4 (gritter) 10/2/07
-glue4.c: * Sccsid @(#)glue4.c	1.3 (gritter) 10/22/05
+glue3.c: * Sccsid @(#)glue3.c	1.5 (gritter) 9/7/08
+glue4.c: * Sccsid @(#)glue4.c	1.4 (gritter) 9/7/08
 glue5.c: * Sccsid @(#)glue5.c	1.4 (gritter) 10/2/07
-hunt1.c: * Sccsid @(#)hunt1.c	1.3 (gritter) 10/22/05
+hunt1.c: * Sccsid @(#)hunt1.c	1.4 (gritter) 9/7/08
 hunt2.c: * Sccsid @(#)hunt2.c	1.3 (gritter) 10/22/05
 hunt3.c: * Sccsid @(#)hunt3.c	1.3 (gritter) 10/22/05
 hunt5.c: * Sccsid @(#)hunt5.c	1.3 (gritter) 10/22/05
@@ -35,7 +35,7 @@ mkey3.c: * Sccsid @(#)mkey3.c	1.3 (gritter) 10/22/05
 refer..c: * Sccsid @(#)refer..c	1.5 (gritter) 12/25/06
 refer0.c: * Sccsid @(#)refer0.c	1.3 (gritter) 10/22/05
 refer1.c: * Sccsid @(#)refer1.c	1.3 (gritter) 10/22/05
-refer2.c: * Sccsid @(#)refer2.c	1.3 (gritter) 10/22/05
+refer2.c: * Sccsid @(#)refer2.c	1.4 (gritter) 9/7/08
 refer3.c: * Sccsid @(#)refer3.c	1.3 (gritter) 10/22/05
 refer4.c: * Sccsid @(#)refer4.c	1.3 (gritter) 10/22/05
 refer5.c: * Sccsid @(#)refer5.c	1.3 (gritter) 10/22/05
