@@ -12,6 +12,8 @@ Release ...
 * dpost: Fixed a case in which invalid backslash sequences were generated
   when insane sizes appeared in intermediate troff input (bug reported by
   Russ Cox).
+* refer: The "-p" option now works with files that are not in the
+  current directory (bug reported by Michael Piotrowski).
 * lookbib: This version does not support the "-n" option, which was
   described in the BSD-derived manual page (thanks to Michael Piotrowski).
 
